# repoducing-shazam

./: .gitignore  CUSTOMIZATION.md  LICENSE  README.md  Wang03-shazam.ipynb  pyproject.toml
src/: analyse.py  compute.py  shazam.py  test.py
