[project]
name = "repoducing-shazam"
version = "0.1.0"
description = "Python implementation of the Shazam audio fingerprinting algorithm (Wang03 paper)"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = []
